Fixing the image alignment some more.

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -13,6 +13,6 @@
     font-size: 1.5rem;
 }
 
-.article-content > img {
+.alignleft > img {
     float: left;
 }
